k8s/invoice-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-worker
  labels:
    app: invoice-worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: invoice-worker
  template:
    metadata:
      labels:
        app: invoice-worker
    spec:
      containers:
        - name: invoice-worker
          image: 680666325893.dkr.ecr.us-east-1.amazonaws.com/shopcloud-invoice-worker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3004
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 15
            periodSeconds: 20
