k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.29
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: frontend-config
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: frontend-config
              mountPath: /usr/share/nginx/html/app.js
              subPath: app.js
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: frontend-config
          configMap:
            name: nginx-frontend
