k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  labels:
    app: admin
spec:
  selector:
    app: admin
  ports:
    - name: http
      protocol: TCP
      port: 3006
      targetPort: 3006
  type: ClusterIP
