k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  selector:
    app: auth
  ports:
    - name: http
      protocol: TCP
      port: 3005
      targetPort: 3005
  type: ClusterIP
