k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
spec:
  selector:
    app: cart
  ports:
    - name: http
      protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
