k8s/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  labels:
    app: checkout
spec:
  selector:
    app: checkout
  ports:
    - name: http
      protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
